--- a/main.css
+++ b/main.css
@@ -4,6 +4,8 @@
 }
 
 * {font-family: verdana;
+  font-size: small;
+  text-weight:bold;
 color:lightgray;
 border-radius:3px;}
 
@@ -13,7 +15,7 @@ ul{list-style-type:none;
 }
 
 .octocat{float: left;
-margin-left: 15px;
+margin:5px;
   border-bottom: 2px solid lightgray;
 }
 
@@ -23,7 +25,7 @@ margin-left: 15px;
   border-style: solid;
   height: 350px;
   width: 350px;
-  margin-left: 7px;
+  margin-left: 0px;
 
   }
 
